Seeing if we can query the db.

--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,9 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: 'Reset Supabase Database'
+description: 'Clean an Supabase database and reset it to a blank state'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  connectionString:  # id of input
+    description: 'e.g. postgres://user:password@host:5432/database'
     required: true
-    default: '1000'
-outputs:
-  time: # output will be available to future steps
-    description: 'The current time after waiting'
 runs:
   using: 'node16'
   main: 'dist/index.js'
