--- a/package.json
+++ b/package.json
@@ -1,36 +1,15 @@
 {
-  "name": "javascript-action",
-  "version": "1.0.0",
-  "description": "JavaScript Action Template",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint .",
-    "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run lint && npm run prepare && npm run test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
-  },
-  "keywords": [
-    "GitHub",
-    "Actions",
-    "JavaScript"
-  ],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
-  },
-  "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.9.0",
+    "@actions/github": "^5.0.3",
+    "async-es": "^3.2.4",
+    "await-to-js": "^3.0.0",
+    "axios": "^0.27.2",
+    "lodash": "^4.17.21",
+    "modern-async": "^1.1.2",
     "pg": "^8.11.0"
   },
-  "devDependencies": {
-    "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.37.0",
-    "jest": "^29.5.0"
+  "scripts": {
+    "build": "npx ncc build index.mjs --license licenses.txt"
   }
 }
